@@ -1,4 +1,4 @@
-.TH VIFM 1 "September 16, 2018" "vifm 0.9.1"
+.TH VIFM 1 "September 17, 2018" "vifm 0.9.1"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -2435,6 +2435,11 @@ display menu with registers content.
 display the contents of the numbered and named registers that are mentioned in
 list (for example "az to display "", "a and "z content).
 .TP
+.BI "                                         :regular"
+.TP
+.BI :regular
+.TP
+switch to regular view leaving custom view.
 .BI "                                         :rename"
 .TP
 .BI :[range]rename[!]
